Fix floating window position so it does not scroll out of view

--- a/src/main.css
+++ b/src/main.css
@@ -99,7 +99,7 @@ color: #fff;
 ----------------------------------------------------- */
 
 #floatingWindow {
-  position: absolute;
+  position: fixed;
   top: 80px;
   right: 20px;
   color: #fff;
